--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -145,6 +145,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ProfileAndFinancialData\BalanceSheet.cs" />
+    <Compile Include="Models\ProfileAndFinancialData\FinancialHighlight.cs" />
+    <Compile Include="Models\ProfileAndFinancialData\FinancialRatio.cs" />
+    <Compile Include="Models\ProfileAndFinancialData\IncomeStatement.cs" />
+    <Compile Include="Models\ProfileAndFinancialData\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -187,7 +192,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
