--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -146,10 +146,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ProfileAndFinancialData\BalanceSheet.cs" />
+    <Compile Include="Models\ProfileAndFinancialData\CashFlow.cs" />
+    <Compile Include="Models\ProfileAndFinancialData\Competitor.cs" />
     <Compile Include="Models\ProfileAndFinancialData\FinancialHighlight.cs" />
     <Compile Include="Models\ProfileAndFinancialData\FinancialRatio.cs" />
     <Compile Include="Models\ProfileAndFinancialData\IncomeStatement.cs" />
+    <Compile Include="Models\ProfileAndFinancialData\IndexMember.cs" />
     <Compile Include="Models\ProfileAndFinancialData\Profile.cs" />
+    <Compile Include="Models\SplitsDividendsAndEarnings\CorporateAction.cs" />
+    <Compile Include="Models\SplitsDividendsAndEarnings\EarningsEstimate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
