--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -155,7 +155,9 @@
     <Compile Include="Models\ProfileAndFinancialData\Profile.cs" />
     <Compile Include="Models\SplitsDividendsAndEarnings\CorporateAction.cs" />
     <Compile Include="Models\SplitsDividendsAndEarnings\EarningsEstimate.cs" />
+    <Compile Include="Models\Status.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\RestClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
