--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="JsonParser.cs" />
     <Compile Include="Models\ProfileAndFinancialData\BalanceSheet.cs" />
     <Compile Include="Models\ProfileAndFinancialData\CashFlow.cs" />
     <Compile Include="Models\ProfileAndFinancialData\Competitor.cs" />
@@ -156,6 +157,7 @@
     <Compile Include="Models\SplitsDividendsAndEarnings\CorporateAction.cs" />
     <Compile Include="Models\SplitsDividendsAndEarnings\EarningsEstimate.cs" />
     <Compile Include="Models\BarchartObjects.cs" />
+    <Compile Include="NewsGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BarchartClient.cs" />
   </ItemGroup>
