--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -147,7 +147,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="IJsonParser.cs" />
-    <Compile Include="Models\News.cs" />
+    <Compile Include="Models\NewsAndFilings\News.cs" />
+    <Compile Include="Models\NewsArticle.cs" />
     <Compile Include="Models\PriceData\QuoteEod.cs" />
     <Compile Include="Models\ProfileAndFinancialData\BalanceSheet.cs" />
     <Compile Include="Models\ProfileAndFinancialData\CashFlow.cs" />
