--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -179,6 +179,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\newsgenerator - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\newsgenerator - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
