add company summary at the end of news articles

--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -149,6 +149,7 @@
     </Compile>
     <Compile Include="IJsonParser.cs" />
     <Compile Include="Models\ChartsAndAnalytics\Chart.cs" />
+    <Compile Include="Models\ChartsAndAnalytics\Technical.cs" />
     <Compile Include="Models\NewsAndFilings\News.cs" />
     <Compile Include="Models\NewsArticle.cs" />
     <Compile Include="Models\PriceData\Quote.cs" />
