--- a/UX2017/UX2017.csproj
+++ b/UX2017/UX2017.csproj
@@ -148,6 +148,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="IJsonParser.cs" />
+    <Compile Include="ITextRazorClient.cs" />
+    <Compile Include="IYahooClient.cs" />
     <Compile Include="Models\ChartsAndAnalytics\Chart.cs" />
     <Compile Include="Models\ChartsAndAnalytics\Technical.cs" />
     <Compile Include="Models\NewsAndFilings\News.cs" />
@@ -166,6 +168,8 @@
     <Compile Include="Models\SplitsDividendsAndEarnings\EarningsEstimate.cs" />
     <Compile Include="Models\BarchartObjects.cs" />
     <Compile Include="INewsGenerator.cs" />
+    <Compile Include="Models\TextRazorObjects.cs" />
+    <Compile Include="Models\YahooObjects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IBarchartClient.cs" />
     <Compile Include="IWordGenerator.cs" />
